--- a/ProjetoCesae/package.json
+++ b/ProjetoCesae/package.json
@@ -15,7 +15,8 @@
     "react-bootstrap": "^2.10.4",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "react-use-cart": "^1.14.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
